[gd_scene load_steps=10 format=3 uid="uid://c7bdg6cb1k0as"]

[ext_resource type="Theme" uid="uid://xldifolqw1ae" path="res://Resources/Themes/MAINMENUTHEME.tres" id="1_cxqh5"]
[ext_resource type="Script" uid="uid://bp6aofgp7vvab" path="res://scripts/UI/pause_menu.gd" id="1_egfxf"]
[ext_resource type="Shader" uid="uid://btotgldfaurkj" path="res://Shaders/pause_menu_blur.gdshader" id="2_cxqh5"]
[ext_resource type="Script" uid="uid://boi4288ln8xg5" path="res://UI/button_tween.gd" id="3_h6j3q"]
[ext_resource type="Texture2D" uid="uid://ltbxs7ek2rh5" path="res://Resources/Assets/UI/9 patch/9 patch no pattern 100.png" id="4_h6j3q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05uyy"]
shader = ExtResource("2_cxqh5")
shader_parameter/amount = 0.0

[sub_resource type="Animation" id="Animation_0b5ob"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGroundBlur:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_03fe5"]
resource_name = "blur"
length = 0.3
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGroundBlur:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqlge"]
_data = {
&"RESET": SubResource("Animation_0b5ob"),
&"blur": SubResource("Animation_03fe5")
}

[node name="PAUSE_MENU" type="CanvasLayer"]
layer = 101

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cxqh5")
script = ExtResource("1_egfxf")

[node name="BackGroundBlur" type="ColorRect" parent="PauseMenu"]
material = SubResource("ShaderMaterial_05uyy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -209.0
offset_right = -135.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.65, 6.65)
texture = ExtResource("4_h6j3q")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 909.0
offset_top = 484.0
offset_right = 1063.0
offset_bottom = 672.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"
script = ExtResource("3_h6j3q")

[node name="Restart" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"
script = ExtResource("3_h6j3q")

[node name="Levels" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Levels"
script = ExtResource("3_h6j3q")

[node name="MainMenu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"
script = ExtResource("3_h6j3q")

[node name="BlurFade" type="AnimationPlayer" parent="PauseMenu"]
libraries = {
&"": SubResource("AnimationLibrary_pqlge")
}

[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Restart" to="PauseMenu" method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Levels" to="PauseMenu" method="_on_levels_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MainMenu" to="PauseMenu" method="_on_main_menu_pressed"]
[connection signal="animation_finished" from="PauseMenu/BlurFade" to="PauseMenu" method="_on_blur_fade_animation_finished"]
